Refactor app.html structure and add ic-domains file for domain configuration

--- a/my-canister-app/src/app.html
+++ b/my-canister-app/src/app.html
@@ -1,53 +1,56 @@
 <!doctype html>
 <html lang="en" theme="dark" menu="expanded">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Init theme as fast as possible -->
-    <script>
-      try {
-        const isDarkPreferred = window.matchMedia(
-          '(prefers-color-scheme: dark)'
-        ).matches;
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MyCanister Dapp</title>
 
-        const currentTheme =
-          localStorage.nnsTheme === null ||
+  <!-- Init theme as fast as possible -->
+  <script>
+    try {
+      const isDarkPreferred = window.matchMedia(
+        '(prefers-color-scheme: dark)'
+      ).matches;
+
+      const currentTheme =
+        localStorage.nnsTheme === null ||
           localStorage.nnsTheme === undefined ||
           localStorage.nnsTheme === ''
-            ? undefined
-            : JSON.parse(localStorage.nnsTheme);
-
-        document.documentElement.setAttribute(
-          'theme',
-          currentTheme ?? (isDarkPreferred ? 'dark' : 'light')
-        );
-      } catch (error) {
-        console.error('Error initializing theme', error);
-      }
-    </script>
-
-    <!-- Init menu as fast as possible as well -->
-    <script>
-      try {
-        const currentMenu = !localStorage.nnsMenu
           ? undefined
-          : JSON.parse(localStorage.nnsMenu);
+          : JSON.parse(localStorage.nnsTheme);
 
-        document.documentElement.setAttribute(
-          'menu',
-          currentMenu ?? 'expanded'
-        );
-      } catch (error) {
-        console.error('Error initializing menu', error);
-      }
-    </script>
+      document.documentElement.setAttribute(
+        'theme',
+        currentTheme ?? (isDarkPreferred ? 'dark' : 'light')
+      );
+    } catch (error) {
+      console.error('Error initializing theme', error);
+    }
+  </script>
 
-    %sveltekit.head%
-  </head>
+  <!-- Init menu as fast as possible as well -->
+  <script>
+    try {
+      const currentMenu = !localStorage.nnsMenu
+        ? undefined
+        : JSON.parse(localStorage.nnsMenu);
 
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+      document.documentElement.setAttribute(
+        'menu',
+        currentMenu ?? 'expanded'
+      );
+    } catch (error) {
+      console.error('Error initializing menu', error);
+    }
+  </script>
+
+  %sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+  <div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
