--- a/my-canister-app/src/app.html
+++ b/my-canister-app/src/app.html
@@ -49,6 +49,21 @@
       }
     </script>
 
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3PTE85TQC4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-3PTE85TQC4');
+    </script>
+
     %sveltekit.head%
   </head>
 
