--- a/my-canister-app/src/app.html
+++ b/my-canister-app/src/app.html
@@ -50,6 +50,7 @@
     </script>
 
     <!-- Google tag (gtag.js) -->
+    <!-- mycanister.app -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-3PTE85TQC4"
@@ -62,6 +63,22 @@
       gtag('js', new Date());
 
       gtag('config', 'G-3PTE85TQC4');
+    </script>
+
+    <!-- Google tag (gtag.js) -->
+    <!-- https://c7lwu-3qaaa-aaaam-qbgia-cai.icp0.io/ -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-VZDYH6FEKW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-VZDYH6FEKW');
     </script>
 
     %sveltekit.head%
