feat: add canister balance and ID display in top-up rule section

--- a/my-canister-dapp-rs/my-canister-dashboard/assets/index.html
+++ b/my-canister-dapp-rs/my-canister-dashboard/assets/index.html
@@ -53,6 +53,16 @@
         <div id="top-up-rule-section" class="card">
           <h3>Top Up Rule</h3>
           <div id="top-up-rule-content">
+            <div style="margin-bottom: 0.5rem">
+              <p>
+                <strong>Canister ICP Balance:</strong>
+                <span id="canister-icp-balance">Loading...</span> ICP
+              </p>
+              <p>
+                <strong>Canister ID:</strong>
+                <span id="canister-id" class="data-display">Loading...</span>
+              </p>
+            </div>
             <div class="form-group">
               <div>
                 <label for="top-up-rule-interval">Interval:</label>
