fix: refactor top-up-rule.ts and use mcd-js package in favour of declarations

--- a/my-canister-dapp-js/canister-dashboard-frontend/src/index.html
+++ b/my-canister-dapp-js/canister-dashboard-frontend/src/index.html
@@ -52,7 +52,7 @@
         <div id="top-up-rule-section" class="card">
           <h3>Top Up Rule</h3>
           <div id="top-up-rule-content">
-            <div style="margin-bottom: 0.5rem">
+            <div>
               <p>
                 <strong>Canister ICP Balance:</strong>
                 <span id="canister-icp-balance">Loading...</span> ICP
