fix: formatting issue

--- a/my-canister-dapp-js/canister-dashboard-frontend/src/index.html
+++ b/my-canister-dapp-js/canister-dashboard-frontend/src/index.html
@@ -23,7 +23,9 @@
 
       <div id="auth-section" class="card">
         <div class="auth-section">
-          <div id="ii-principal-label" class="principal-label hidden">Logged in as</div>
+          <div id="ii-principal-label" class="principal-label hidden">
+            Logged in as
+          </div>
           <div id="ii-principal" class="data-display hidden"></div>
           <button id="auth-btn" class="btn"></button>
         </div>
@@ -40,9 +42,7 @@
             <p>
               <strong>ICRC1 Account:</strong>
             </p>
-            <p>
-              <div id="icrc1-account" class="data-display">Loading...</div>
-            </p>
+            <div id="icrc1-account" class="data-display">Loading...</div>
             <p>
               <button
                 id="refresh-balance-btn"
